// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkRating should render correctly 1`] = `
<View>
  <RCTBPKRating
    orientation="horizontal"
    size="base"
    subtitle={
      Array [
        "Low title",
        "Medium title",
        "High title",
      ]
    }
    title={
      Array [
        "Low title",
        "Medium title",
        "High title",
      ]
    }
    value={3}
  />
</View>
`;

exports[`iOS BpkRating should render correctly with all props 1`] = `
<View
  orientaion="vertical"
>
  <RCTBPKRating
    orientation="horizontal"
    size="sm"
    subtitle={
      Array [
        "Low title",
        "Medium title",
        "High title",
      ]
    }
    title={
      Array [
        "Low title",
        "Medium title",
        "High title",
      ]
    }
    value={3}
  />
</View>
`;

exports[`iOS BpkRating should render correctly with strings instead of arrays 1`] = `
<View>
  <RCTBPKRating
    orientation="horizontal"
    size="lg"
    subtitle={
      Array [
        "single",
      ]
    }
    title={
      Array [
        "single",
      ]
    }
    value={3}
  />
</View>
`;

exports[`iOS BpkRating should spread extra properties 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTBPKRating
    orientation="horizontal"
    size="base"
    subtitle={
      Array [
        "single",
      ]
    }
    title={
      Array [
        "single",
      ]
    }
    value={3}
  />
</View>
`;
